--- a/tpl/main_menu.html
+++ b/tpl/main_menu.html
@@ -5,20 +5,61 @@
       <div class="menu-icon"><span class="line"></span><span class="line"></span><span class="line"></span></div><span>Меню</span>
     </div>
     <menu>
-      <li><a href="javascript:;" class="with-submenu"><span>О клинике </span><i class="icokiostom-down hidden-xs"></i></a>
+      <li><a href="/o-klinike/" class="with-submenu"><span>О клинике</span><i class="icokiostom-down hidden-xs"></i></a>
         <ul class="submenu">
-          <li><a href="javascript:;"><span>Команда</span></a></li>
-          <li><a href="javascript:;"><span>Расписание</span></a></li>
-          <li><a href="javascript:;"><span>Наши работы</span></a></li>
-          <li><a href="javascript:;"><span>Новости</span></a></li>
-          <li><a href="javascript:;"><span>Статьи</span></a></li>
-          <li><a href="javascript:;"><span>Акции</span></a></li>
-          <li><a href="javascript:;"><span>Органы исполнительной власти</span></a></li>
-          <li><a href="javascript:;"><span>Отзывы</span></a></li>
-          <li><a href="javascript:;"><span>Privacy Policy</span></a></li>
+          <li><a href="/doctors/">Команда</a></li>
+          <li><a href="/schedule/">Расписание</a></li>
+          <li><a href="/work/">Наши работы</a></li>
+          <li><a href="/news/">Новости</a></li>
+          <li><a href="/stati-po-stomatologii/">Статьи</a></li>
+          <li><a href="/action/">Акции</a></li>
+          <li><a href="/organy-ispolnitelnoy-vlasti/">Органы исполнительной власти</a></li>
+          <li><a href="/reviews/">Отзывы</a></li>
+          <li><a href="/privacy-policy/">Privacy Policy</a></li>
         </ul>
       </li>
-      <li><a href="javascript:;"><span>Контакты</span></a></li>
+      <li><a href="/doctors/" class="with-submenu"><span>Команда</span><i class="icokiostom-down hidden-xs"></i></a>
+        <ul class="submenu">
+          <li><a href="/schedule/">Расписание</a></li>
+        </ul>
+      </li>
+      <li><a href="/work/"><span>Наши работы</span></a></li>
+      <li><a href="/services/" class="with-submenu"><span>Услуги</span><i class="icokiostom-down hidden-xs"></i></a>
+        <ul class="submenu">
+          <li><a href="/services/protezirovanie/">протезирование</a></li>
+          <li><a href="/services/implantation/">имплантация</a></li>
+          <li><a href="/services/surgery/">хирургия</a></li>
+          <li><a href="/services/lecheniye-zubov/">лечение</a></li>
+          <li><a href="/services/whitening/">отбеливание</a></li>
+        </ul>
+      </li>
+      <li><a href="/services/protezirovanie/" class="with-submenu"><span>Протезирование</span><i class="icokiostom-down hidden-xs"></i></a>
+        <ul class="submenu">
+          <li><a href="/services/protezirovanie/viniry">Виниры</a></li>
+          <li><a href="/services/protezirovanie/zubnye-koronki/">Коронки</a></li>
+          <li><a href="/services/protezirovanie/zubnye-mosty/">Мостовидные протезы</a></li>
+          <li><a href="/services/protezirovanie/zubnye-vkladki/">Вкладки</a></li>
+          <li><a href="/services/protezirovanie/semnoe-protezirovanie">Съемное протезирование</a></li>
+          <li><a href="/services/protezirovanie/byugelnoe-protezirovanie">Бюгельное протезирование</a></li>
+          <li><a href="/services/protezirovanie/protezirovanie-na-implantatah/">Протезирование на имплантатах</a></li>
+        </ul>
+      </li>
+      <li><a href="/services/implantation/" class="with-submenu"><span>Имплантация</span><i class="icokiostom-down hidden-xs"></i></a>
+        <ul class="submenu">
+          <li><a href="/services/implantation/odnomomentnaya-implantaciya-zubov">Одномоментная имплантация зубов</a></li>
+          <li><a href="/services/implantation/implantaciya-All-on-4">Имплантация All-on-4</a></li>
+          <li><a href="/services/implantation/sistemy-implantacii">Системы имплантации</a></li>
+          <li><a href="/services/implantation/narashhivanie-kostnoj-tkani/">Наращивание костной ткани</a></li>
+        </ul>
+      </li>
+      <li><a href="/price/" class="with-submenu"><span>Цены</span><i class="icokiostom-down hidden-xs"></i></a>
+        <ul class="submenu">
+          <li><a href="/ceni-na-lechenie-zubov/">Терапия</a></li>
+          <li><a href="/ceni-na-implantaciu-i-hirurgiu/">Хирургия</a></li>
+          <li><a href="/ceni-na-protezirovanie/">Ортопедия</a></li>
+        </ul>
+      </li>
+      <li><a href="/contacts/"><span>Контакты</span></a></li>
     </menu>
   </div>
 </div>
