add menu search form

--- a/tpl/main_menu.html
+++ b/tpl/main_menu.html
@@ -5,6 +5,16 @@
       <div class="menu-icon"><span class="line"></span><span class="line"></span><span class="line"></span></div><span>Меню</span>
     </div>
     <menu>
+      <li class="menu-search"><i id="menu-search" class="icokiostom-search"></i>
+        <div class="menu-search-block">
+          <div class="menu-search-form">
+            <form action="/" method="POST">
+              <input type="text" name="q" value=""/>
+              <button type="submit" class="icokiostom-search"></button>
+            </form>
+          </div>
+        </div>
+      </li>
       <li><a href="/o-klinike/" class="with-submenu"><span>О клинике</span><i class="icokiostom-down hidden-xs"></i></a>
         <ul class="submenu">
           <li><a href="/doctors/">Команда</a></li>
